--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <title>Погода и карта</title>
   <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
   <link rel="stylesheet" href="style.css">
 </head>
